--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Katz BAO"
-  avatar           : "profile.png"
+  avatar           : "Joseph-M-Katz-Graduate-School-of-Business.png"
   bio              : "Webpage for all things related to the Katz BAO Seminar Series"
   location         : "Pittsburgh, PA"
   employer         :
