--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "The Department of Business Analytics and Operations at the University of Pittsburgh"
   avatar           : "Joseph-M-Katz-Graduate-School-of-Business.png"
-  bio              : "Webpage for all things related to the Katz BAO Seminar Series"
+  bio              : "Webpage for past and future seminars hosted by the Department of Business Analytics and Operations of the Katz Graduate School of Business at the University of Pittsburgh"
   location         : "Pittsburgh, PA"
   employer         :
   email            :
