--- a/_config.yml
+++ b/_config.yml
@@ -78,8 +78,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "The Department of Business Analytics and Operations at the University of Pittsburgh"
-  avatar           : "Joseph-M-Katz-Graduate-School-of-Business.png"
+  name             : "Business Analytics and Operations at the University of Pittsburgh"
+  avatar           : "Shield.jpg"
   bio              : "Webpage for past and future seminars hosted by the Department of Business Analytics and Operations of the Katz Graduate School of Business at the University of Pittsburgh"
   location         : "Pittsburgh, PA"
   employer         :
