--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Katz BAO Seminar Series"
 title_separator          : "-"
 name                     : &name "Katz BAO"
 description              : &description "personal description"
-url                      : https://katz-bao-seminar.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://katz-bao-seminar.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Katz-Bao-Seminar/katz-bao-seminar.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
